--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }
         h1 {
             text-align: center;
+            font-size: 30px
         }
         .post-form, .comment-form {
             margin-bottom: 30px;
